# py-clock

./: README.md  README.rst  dagger.json  pyproject.toml  setup.py
.github/workflows/: ci.yaml  dagger.yaml  release.yml  test.yml
dagger/: pyproject.toml
dagger/src/py_clock/: __init__.py  main.py
py_text_clock/: fontMods.py
source/: clockFace.py  command_line.py  fontMods.py  mylogger.py
tests/: test_clock.py
